@@ -1,0 +1,5 @@
+# -- FILE: pytest.ini (or tox.ini)
+[pytest]
+DJANGO_SETTINGS_MODULE=Shop.settings
+# -- recommended but optional:
+python_files = tests.py test_*.py *_tests.py
